fix: fix the problem that the paragraph is too long on about page

--- a/src/assets/scss/about.scss
+++ b/src/assets/scss/about.scss
@@ -88,6 +88,7 @@
     }
 
     &__desc {
+      width: 100%;
       margin: 36px auto;
       text-align: center;
     }
